--- a/chuyen-de-1/src/App.scss
+++ b/chuyen-de-1/src/App.scss
@@ -12,6 +12,8 @@ code {
     monospace;
 }
 .app-containers{
+  justify-content: center;
+  
   .login-container{
     display: flex;
     flex-direction: column;
@@ -68,8 +70,8 @@ code {
     cursor: not-allowed;
   }
   .back{
+    cursor: pointer;
     text-align: center;
     margin-top: 30px;
-    cursor: pointer;
   }
 }
