--- a/chuyen-de-1/src/App.css
+++ b/chuyen-de-1/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.btn-danger{
+  background-color: red;
+  color: #fff;
+ 
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
