--- a/chuyen-de-1/src/App.scss
+++ b/chuyen-de-1/src/App.scss
@@ -94,3 +94,26 @@ code {
     }
   }
 }
+
+//informationWarehouse
+.warehouse-container{
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  // height: 0 auto;
+  // display: flex;
+  .warehouse-row{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .image{
+    width: 100%;
+    height: 300px;
+  }
+  .box-monney-capacty{
+    width: 100%;
+    height: 100px;
+    background-color: blue;
+  }
+}
