--- a/chuyen-de-1/src/App.scss
+++ b/chuyen-de-1/src/App.scss
@@ -97,11 +97,13 @@ code {
 
 //informationWarehouse
 .warehouse-container{
+  height: 100vh;
+  width: 200vh; 
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
   // height: 0 auto;
-  // display: flex;
+  display: flex;
   .warehouse-row{
     display: flex;
     flex-direction: column;
