--- a/chuyen-de-1/src/theme/ListWarehouseUser.css
+++ b/chuyen-de-1/src/theme/ListWarehouseUser.css
@@ -1,5 +1,4 @@
 .listwarehouseuser{
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,10 +7,11 @@
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
-    font-size: 0.9em;
+    font-size: 1.3em;
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width: 90%;
 }
 
 .styled-table thead tr {
@@ -40,4 +40,9 @@
 .styled-table tbody tr.active-row {
     font-weight: bold;
     color: #009879;
+}
+
+.emptyWarehouse {
+    font-size: 1.3em;
+    font-family: sans-serif;
 }
