--- a/chuyen-de-1/src/theme/ListWarehouseUser.css
+++ b/chuyen-de-1/src/theme/ListWarehouseUser.css
@@ -46,3 +46,14 @@
     font-size: 1.3em;
     font-family: sans-serif;
 }
+
+#myInput {
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 90%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+    display: inline-block;
+  }
