--- a/chuyen-de-1/src/theme/Profile.css
+++ b/chuyen-de-1/src/theme/Profile.css
@@ -106,3 +106,9 @@
     width: 380px;
     margin-bottom: 20px;
 }
+
+.error-feedback-profile {
+    color: red;
+    margin-bottom: 10px;
+    margin-top: -20px;
+}
