--- a/chuyen-de-1/src/index.css
+++ b/chuyen-de-1/src/index.css
@@ -20,3 +20,5 @@ code {
   color: #ffff;
   padding: 10px;
 }
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
