--- a/chuyen-de-1/src/theme/AddPost.css
+++ b/chuyen-de-1/src/theme/AddPost.css
@@ -11,12 +11,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 48px;
+    /* padding: 48px; */
   }
 
   .formbold-form-wrapper {
     margin: 0 auto;
-    max-width: 550px;
+    max-width: 950px;
     width: 100%;
     background: white;
   }
