--- a/chuyen-de-1/src/theme/RentWareHouse.css
+++ b/chuyen-de-1/src/theme/RentWareHouse.css
@@ -1,11 +1,11 @@
-body {
+.rent-warehouse-container {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
     text-align: center;
     margin: 50px;
   }
   
-  form {
+  .rent-form {
     max-width: 400px;
     margin: 0 auto;
     background-color: #fff;
